fuego-sdk/dart/lib/src/fuego_sdk_bindings.dart

// AUTO-GENERATED FILE - DO NOT MODIFY
// This file is generated by ffigen from fuego_sdk.h
// Run: flutter pub run ffigen to regenerate

import 'dart:ffi';
import 'dart:ffi' as ffi;

class FuegoSDKBindings {
  final ffi.DynamicLibrary _dylib;

  FuegoSDKBindings(this._dylib);

  // Initialization
  late final fuego_sdk_init = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Int32),
    int Function(Pointer<Utf8>, int)
  >('fuego_sdk_init');

  late final fuego_sdk_cleanup = _dylib.lookupFunction<
    Void Function(),
    void Function()
  >('fuego_sdk_cleanup');

  late final fuego_sdk_version = _dylib.lookupFunction<
    Pointer<Utf8> Function(),
    Pointer<Utf8> Function()
  >('fuego_sdk_version');

  // Node
  late final fuego_node_start = _dylib.lookupFunction<
    Int32 Function(Int32, Pointer<Utf8>, Uint16),
    int Function(int, Pointer<Utf8>, int)
  >('fuego_node_start');

  late final fuego_node_stop = _dylib.lookupFunction<
    Int32 Function(),
    int Function()
  >('fuego_node_stop');

  late final fuego_node_is_running = _dylib.lookupFunction<
    Int32 Function(),
    int Function()
  >('fuego_node_is_running');

  late final fuego_node_get_peer_count = _dylib.lookupFunction<
    Int32 Function(Pointer<Uint32>),
    int Function(Pointer<Uint32>)
  >('fuego_node_get_peer_count');

  late final fuego_node_get_block_height = _dylib.lookupFunction<
    Int32 Function(Pointer<Uint32>),
    int Function(Pointer<Uint32>)
  >('fuego_node_get_block_height');

  late final fuego_node_get_sync_status = _dylib.lookupFunction<
    Int32 Function(Pointer<Bool>),
    int Function(Pointer<Bool>)
  >('fuego_node_get_sync_status');

  // Mining
  late final fuego_mining_start = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>),
    int Function(Pointer<Utf8>)
  >('fuego_mining_start');

  late final fuego_mining_stop = _dylib.lookupFunction<
    Int32 Function(),
    int Function()
  >('fuego_mining_stop');

  late final fuego_mining_is_running = _dylib.lookupFunction<
    Int32 Function(),
    int Function()
  >('fuego_mining_is_running');

  late final fuego_mining_get_hashrate = _dylib.lookupFunction<
    Int32 Function(Pointer<Double>),
    int Function(Pointer<Double>)
  >('fuego_mining_get_hashrate');

  // CD
  late final fuego_cd_create = _dylib.lookupFunction<
    Int32 Function(Uint64, Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<FuegoCDInfo>),
    int Function(int, int, Pointer<Utf8>, Pointer<Utf8>, Pointer<FuegoCDInfo>)
  >('fuego_cd_create');

  late final fuego_cd_redeem = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<Uint64>),
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<Uint64>)
  >('fuego_cd_redeem');

  late final fuego_cd_get_info = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<FuegoCDInfo>),
    int Function(Pointer<Utf8>, Pointer<FuegoCDInfo>)
  >('fuego_cd_get_info');

  // Wallet
  late final fuego_wallet_open = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>),
    int Function(Pointer<Utf8>, Pointer<Utf8>)
  >('fuego_wallet_open');

  late final fuego_wallet_close = _dylib.lookupFunction<
    Void Function(),
    void Function()
  >('fuego_wallet_close');

  late final fuego_wallet_is_open = _dylib.lookupFunction<
    Int32 Function(),
    int Function()
  >('fuego_wallet_is_open');

  late final fuego_wallet_get_balance = _dylib.lookupFunction<
    Int32 Function(Pointer<Uint64>, Pointer<Uint64>),
    int Function(Pointer<Uint64>, Pointer<Uint64>)
  >('fuego_wallet_get_balance');

  late final fuego_wallet_get_heat_balance = _dylib.lookupFunction<
    Int32 Function(Pointer<Uint64>, Pointer<Uint64>),
    int Function(Pointer<Uint64>, Pointer<Uint64>)
  >('fuego_wallet_get_heat_balance');

  late final fuego_wallet_send = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Uint64, Pointer<Utf8>, Uint64, Pointer<Utf8>, Pointer<Utf8>, Size),
    int Function(Pointer<Utf8>, int, Pointer<Utf8>, int, Pointer<Utf8>, Pointer<Utf8>, int)
  >('fuego_wallet_send');

  // Swap
  late final fuego_swap_initiate = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Uint64, Uint64, Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<FuegoSwapInfo>),
    int Function(Pointer<Utf8>, int, int, Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<FuegoSwapInfo>)
  >('fuego_swap_initiate');

  late final fuego_swap_join = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<FuegoSwapInfo>),
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<FuegoSwapInfo>)
  >('fuego_swap_join');

  late final fuego_swap_lock_funds = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>),
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>)
  >('fuego_swap_lock_funds');

  late final fuego_swap_lock_counterparty_funds = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>),
    int Function(Pointer<Utf8>, Pointer<Utf8>)
  >('fuego_swap_lock_counterparty_funds');

  late final fuego_swap_complete = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>),
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>)
  >('fuego_swap_complete');

  late final fuego_swap_refund = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>),
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>)
  >('fuego_swap_refund');

  late final fuego_swap_get_info = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<FuegoSwapInfo>),
    int Function(Pointer<Utf8>, Pointer<FuegoSwapInfo>)
  >('fuego_swap_get_info');

  late final fuego_swap_extract_secret = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Uint8>, Pointer<Uint8>, Pointer<Uint8>),
    int Function(Pointer<Utf8>, Pointer<Uint8>, Pointer<Uint8>, Pointer<Uint8>)
  >('fuego_swap_extract_secret');

  // HEAT
  late final fuego_heat_generate_proof = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<FuegoHEATProof>),
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<FuegoHEATProof>)
  >('fuego_heat_generate_proof');

  late final fuego_heat_verify_proof = _dylib.lookupFunction<
    Int32 Function(Pointer<FuegoHEATProof>, Pointer<Bool>),
    int Function(Pointer<FuegoHEATProof>, Pointer<Bool>)
  >('fuego_heat_verify_proof');

  // Alias
  late final fuego_alias_register = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Size),
    int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, Pointer<Utf8>, int)
  >('fuego_alias_register');

  late final fuego_alias_resolve = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Size),
    int Function(Pointer<Utf8>, Pointer<Utf8>, int)
  >('fuego_alias_resolve');

  late final fuego_alias_get_owned = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Pointer<Utf8>>, Pointer<Size>),
    int Function(Pointer<Utf8>, Pointer<Pointer<Utf8>>, Pointer<Size>)
  >('fuego_alias_get_owned');

  // Memory
  late final fuego_free_string = _dylib.lookupFunction<
    Void Function(Pointer<Utf8>),
    void Function(Pointer<Utf8>)
  >('fuego_free_string');

  late final fuego_free_pointer_array = _dylib.lookupFunction<
    Void Function(Pointer<Pointer<Utf8>>, Size),
    void Function(Pointer<Pointer<Utf8>>, int)
  >('fuego_free_pointer_array');

  // Pool
  late final fuego_pool_initialize = _dylib.lookupFunction<
    Int32 Function(Uint64, Uint64, Uint64),
    int Function(int, int, int)
  >('fuego_pool_initialize');

  late final fuego_pool_get_reserves = _dylib.lookupFunction<
    Int32 Function(Pointer<FuegoPoolReserves>),
    int Function(Pointer<FuegoPoolReserves>)
  >('fuego_pool_get_reserves');

  late final fuego_pool_swap = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Uint64, Uint64, Pointer<FuegoPoolSwapResult>),
    int Function(Pointer<Utf8>, int, int, Pointer<FuegoPoolSwapResult>)
  >('fuego_pool_swap');

  late final fuego_pool_get_estimated_output = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Uint64, Pointer<Uint64>),
    int Function(Pointer<Utf8>, int, Pointer<Uint64>)
  >('fuego_pool_get_estimated_output');

  late final fuego_pool_add_liquidity = _dylib.lookupFunction<
    Int32 Function(Uint64, Uint64, Uint64, Pointer<FuegoPoolLiquidityResult>),
    int Function(int, int, int, Pointer<FuegoPoolLiquidityResult>)
  >('fuego_pool_add_liquidity');

  late final fuego_pool_remove_liquidity = _dylib.lookupFunction<
    Int32 Function(Uint64, Uint64, Uint64, Uint64, Pointer<FuegoPoolLiquidityResult>),
    int Function(int, int, int, int, Pointer<FuegoPoolLiquidityResult>)
  >('fuego_pool_remove_liquidity');

  late final fuego_pool_get_lp_balance = _dylib.lookupFunction<
    Int32 Function(Pointer<Utf8>, Pointer<Uint64>),
    int Function(Pointer<Utf8>, Pointer<Uint64>)
  >('fuego_pool_get_lp_balance');
}

// Structs
final class FuegoCDInfo extends ffi.Struct {
  @ffi.Uint64()
  external int amount;

  @ffi.Uint64()
  external int interest;

  @ffi.Uint64()
  external int unlock_time;

  @ffi.Array.multi([65])
  external ffi.Array<ffi.Int8> tx_hash;
}

final class FuegoSwapInfo extends ffi.Struct {
  @ffi.Array.multi([65])
  external ffi.Array<ffi.Int8> swap_id;

  @ffi.Int32()
  external int state;

  @ffi.Array.multi([128])
  external ffi.Array<ffi.Int8> counterparty_address;

  @ffi.Uint64()
  external int xfg_amount;

  @ffi.Uint64()
  external int counterparty_amount;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Int8> counterparty_chain;

  @ffi.Array.multi([65])
  external ffi.Array<ffi.Int8> escrow_pubkey;

  @ffi.Array.multi([65])
  external ffi.Array<ffi.Int8> adaptor_point;

  @ffi.Array.multi([65])
  external ffi.Array<ffi.Int8> tx_hash;
}

final class FuegoHEATProof extends ffi.Struct {
  @ffi.Array.multi([4096])
  external ffi.Array<ffi.Int8> proof_data;

  @ffi.Size()
  external int proof_size;

  @ffi.Array.multi([32])
  external ffi.Array<ffi.Int8> verification_result;
}

final class FuegoPoolReserves extends ffi.Struct {
  @ffi.Uint64()
  external int xfg_reserve;

  @ffi.Uint64()
  external int heat_reserve;

  @ffi.Uint64()
  external int total_lp;

  @ffi.Uint64()
  external int fee_bps;

  @ffi.Uint64()
  external int k_last;
}

final class FuegoPoolSwapResult extends ffi.Struct {
  @ffi.Uint64()
  external int input_amount;

  @ffi.Uint64()
  external int output_amount;

  @ffi.Uint64()
  external int fee_amount;

  @ffi.Uint64()
  external int price_impact_bps;
}

final class FuegoPoolLiquidityResult extends ffi.Struct {
  @ffi.Uint64()
  external int lp_tokens;

  @ffi.Uint64()
  external int xfg_amount;

  @ffi.Uint64()
  external int heat_amount;
}
